<?xml version="1.0"?>
<package format="3">
  <name>wall_follower</name>
  <version>1.0.0</version>
  <description>A wall follower for the racecar.</description>
  <maintainer email="sebastianag2002@gmail.com">racecar@mit.edu</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ackermann_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
    <depend>ackermann_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>rclpy</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>visualization_msgs</depend>
  </export>
</package>